Fix spacing between email input and next button

--- a/styles.css
+++ b/styles.css
@@ -247,10 +247,6 @@ body {
   border-radius: 100px;
 }
 
-.step #email {
-  margin-bottom: 0;
-}
-
 .final-button {
   background-color: black;
   color: white;
